@@ -31,7 +31,7 @@
 
     <groupId>org.wildfly.core</groupId>
     <artifactId>wildfly-core-parent</artifactId>
-    <version>3.0.0.Alpha16-SNAPSHOT</version>
+    <version>3.0.0.Alpha18-SNAPSHOT</version>
 
     <name>WildFly: Core Parent Aggregator</name>
     <description>WildFly: Core Parent Aggregator</description>
@@ -65,6 +65,7 @@
           -->
         <maven.min.version>3.2.1</maven.min.version>
         <version.surefire.plugin>2.18.1</version.surefire.plugin>
+        <version.compiler.plugin>3.6.0</version.compiler.plugin>
 
         <!-- use older version of checkstyle as otherwise lots of checks fail -->
         <version.checkstyle>6.8</version.checkstyle>
@@ -81,7 +82,7 @@
 
         <version.commons-io>2.4</version.commons-io>
         <version.commons-lang>2.6</version.commons-lang>
-        <version.io.undertow>1.4.7.Final</version.io.undertow>
+        <version.io.undertow>1.4.8.Final</version.io.undertow>
         <version.javax.inject.javax.inject>1</version.javax.inject.javax.inject>
         <version.junit>4.12</version.junit>
         <version.log4j>1.2.16</version.log4j>
@@ -106,13 +107,13 @@
         <version.org.jboss.logmanager.commons-logging-jboss-logmanager>1.0.0.Final</version.org.jboss.logmanager.commons-logging-jboss-logmanager>
         <version.org.jboss.logmanager.jboss-logmanager>2.0.4.Final</version.org.jboss.logmanager.jboss-logmanager>
         <version.org.jboss.logmanager.log4j-jboss-logmanager>1.1.2.Final</version.org.jboss.logmanager.log4j-jboss-logmanager>
-        <version.org.jboss.marshalling.jboss-marshalling>2.0.0.Beta3</version.org.jboss.marshalling.jboss-marshalling>
+        <version.org.jboss.marshalling.jboss-marshalling>2.0.0.Beta4</version.org.jboss.marshalling.jboss-marshalling>
         <!-- this is test only dependancy -->
         <version.org.jboss.metadata.jboss-metadata-common>10.0.0.Final</version.org.jboss.metadata.jboss-metadata-common>
         <version.org.jboss.modules.jboss-modules>1.6.0.Beta3</version.org.jboss.modules.jboss-modules>
         <version.org.jboss.msc.jboss-msc>1.2.7.Final</version.org.jboss.msc.jboss-msc>
         <version.org.jboss.remoting>5.0.0.Beta13</version.org.jboss.remoting>
-        <version.org.jboss.remotingjmx.remoting-jmx>3.0.0.Beta1</version.org.jboss.remotingjmx.remoting-jmx>
+        <version.org.jboss.remotingjmx.remoting-jmx>3.0.0.Beta2</version.org.jboss.remotingjmx.remoting-jmx>
         <version.org.jboss.shrinkwrap.shrinkwrap>1.2.3</version.org.jboss.shrinkwrap.shrinkwrap>
         <version.org.jboss.slf4j.slf4j-jboss-logmanager>1.0.3.GA</version.org.jboss.slf4j.slf4j-jboss-logmanager>
         <version.org.jboss.logging.jul-to-slf4j-stub>1.0.1.Final</version.org.jboss.logging.jul-to-slf4j-stub>
@@ -120,7 +121,7 @@
         <version.org.jboss.staxmapper>1.3.0.Final</version.org.jboss.staxmapper>
         <version.org.jboss.stdio>1.0.2.GA</version.org.jboss.stdio>
         <version.org.jboss.threads>2.2.1.Final</version.org.jboss.threads>
-        <version.org.jboss.xnio>3.4.2.Final</version.org.jboss.xnio>
+        <version.org.jboss.xnio>3.4.3.Final</version.org.jboss.xnio>
         <version.org.jboss.xnio.xnio-api>${version.org.jboss.xnio}</version.org.jboss.xnio.xnio-api>
         <version.org.jboss.xnio.xnio-nio>${version.org.jboss.xnio}</version.org.jboss.xnio.xnio-nio>
         <version.org.mockito>1.9.5</version.org.mockito>
@@ -132,12 +133,12 @@
         <version.org.wildfly.build-tools>1.1.8.Final</version.org.wildfly.build-tools>
         <version.org.wildfly.checkstyle-config>1.0.4.Final</version.org.wildfly.checkstyle-config>
         <version.org.wildfly.client.config>1.0.0.Beta1</version.org.wildfly.client.config>
-        <version.org.wildfly.common>1.2.0.Beta1</version.org.wildfly.common>
+        <version.org.wildfly.common>1.2.0.Beta3</version.org.wildfly.common>
         <version.org.wildfly.discovery>1.0.0.Beta3</version.org.wildfly.discovery>
         <version.org.wildfly.openssl>1.0.0.Alpha6</version.org.wildfly.openssl>
         <version.org.wildfly.legacy.test>2.0.2.Final</version.org.wildfly.legacy.test>
-        <version.org.wildfly.security.elytron>1.1.0.Beta17</version.org.wildfly.security.elytron>
-        <version.org.wildfly.security.elytron-web.undertow-server>1.0.0.Beta6</version.org.wildfly.security.elytron-web.undertow-server>
+        <version.org.wildfly.security.elytron>1.1.0.Beta18</version.org.wildfly.security.elytron>
+        <version.org.wildfly.security.elytron-web.undertow-server>1.0.0.Beta7</version.org.wildfly.security.elytron-web.undertow-server>
         <version.xml-resolver>1.2</version.xml-resolver> <!-- Apache xml-resolver -->
         <!-- Non-default maven plugin versions and configuration -->
         <version.org.zanata.plugin>3.9.1</version.org.zanata.plugin>
@@ -1605,41 +1606,50 @@
     <!-- Profiles -->
     <profiles>
         <!--
-          Name: modularizedJdk
-          Descr: various workarounds activation for modularized JDK
+          Name: JDK9
+          Descr: various workarounds activation for JDK9
         -->
         <profile>
-            <id>modularizedJdk</id>
+            <id>JDK9</id>
             <activation>
                 <jdk>9</jdk>
             </activation>
             <properties>
-                <!-- [WFCORE-1431] remove SASL workaround -->
-                <modular.jdk.args>--add-exports=java.security.sasl/com.sun.security.sasl.digest=ALL-UNNAMED
-                    --add-exports=java.security.sasl/com.sun.security.sasl=ALL-UNNAMED
-                    --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED
-                    --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+                <modular.jdk.args>
+                    --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+                    --add-opens=java.base/java.io=ALL-UNNAMED
+                    --add-opens=java.base/java.lang=ALL-UNNAMED
+                    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                    --add-opens=java.base/java.math=ALL-UNNAMED
+                    --add-opens=java.base/java.net=ALL-UNNAMED
+                    --add-opens=java.base/java.security=ALL-UNNAMED
+                    --add-opens=java.base/java.util=ALL-UNNAMED
+                    --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                    --add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED
+                    --add-opens=java.management/javax.management=ALL-UNNAMED
+                    --add-opens=java.management/javax.management.openmbean=ALL-UNNAMED
                 </modular.jdk.args>
                 <!-- [WFCORE-1494] remove JUL workaround -->
-                <modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true</modular.jdk.props>
+                <modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true -Dsun.reflect.debugModuleAccessChecks=true</modular.jdk.props>
+                <version.org.jboss.byteman>4.0.0-ALPHA</version.org.jboss.byteman>
             </properties>
             <build>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-compiler-plugin</artifactId>
-                            <version>${version.compiler.plugin}</version>
-                            <configuration>
-                                <!-- fork is needed so compiler args can be used -->
-                                <fork>true</fork>
-                                <compilerArgs>
-                                    <arg>-J--add-modules</arg>
-                                    <arg>-Jjava.annotations.common</arg>
-                                </compilerArgs>
-                            </configuration>
-                        </plugin>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>${version.compiler.plugin}</version>
+                        <configuration>
+                            <release>8</release>
+                            <!-- fork is needed so compiler args can be used -->
+                            <fork>true</fork>
+                            <compilerArgs>
+                                <arg>-J--add-modules=java.annotations.common</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
 
-                    </plugins>
+                </plugins>
             </build>
         </profile>
         <!--
